# omp_tasks

./: CMakeLists.txt  funcs.cpp  funcs.h  main.cpp
